<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMenu"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BackBtn"
        android:layout_marginTop="15dp"
        android:text="@string/back"
        android:textStyle="bold"
        android:backgroundTint="@color/newB"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        />




    <TextView
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aviv_coffee_menu" />

    <Switch
        android:padding="15dp"
        android:id="@+id/veganBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/show_vegan_only"
        android:outlineSpotShadowColor="@color/newB"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
